--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
     "pages/pk/userPk/userPk",
 
     "pages/pk/userPublishPost/userPublishPost",
- 
+    "pages/pk/groupCard/groupCard",
 
 
     "pages/pk/userFinds/userFinds",
