--- a/app.json
+++ b/app.json
@@ -26,17 +26,16 @@
     "pages/pk/findCard/findCard",
     "pages/pk/userCard/userCard",
     "pages/pk/editUserGroup/editUserGroup",
-    "pages/pk/build/build",
-    "pages/pk/home/home",
     "pages/pk/singleLocation/singleLocation",
     "pages/pk/followers/followers",
     "pages/pk/fans/fans",
     "pages/pk/userPk/userPk",
 
     "pages/pk/userPublishPost/userPublishPost",
+    "pages/pk/groupCardList/groupCardList",
     "pages/pk/groupCard/groupCard",
     "pages/pk/userSort/userSort",
-
+    "pages/pk/userGroups/userGroups",
     "pages/pk/userFinds/userFinds",
     "pages/pk/invite/invite",
     "pages/pk/showLocation/showLocation",
